# stackexplain

./: .gitignore  README.md
backend/: cli.py  pyproject.toml  requirements.txt
backend/app/: core.py  main.py
backend/src/stackexplain/: cli.py
backend/src/stackexplain/app/: core.py  main.py
frontend/stackexplain-frontend/: package-lock.json  package.json
frontend/stackexplain-frontend/src/: App.tsx  styles.css
