[project]
name = "stackexplain"
version = "0.1.0"
description = "Explain Python errors using LLMs"
requires-python = ">=3.10"

dependencies = [
    "altgraph==0.17.4",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "beautifulsoup4==4.13.4",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "distro==1.9.0",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.13",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.10.0",
    "openai==1.90.0",
    "packaging==25.0",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "pyinstaller==6.14.1",
    "pyinstaller-hooks-contrib==2025.5",
    "pyperclip==1.9.0",
    "python-dotenv==1.1.0",
    "requests==2.32.4",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "starlette==0.46.2",
    "tqdm==4.67.1",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0",
    "urllib3==2.5.0",
    "uvicorn==0.34.3"
]

[project.scripts]
explainerr = "stackexplain.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
